--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'Sticky Sans';
+    src: url('/PINGU/font/Sticky Sans.otf');
+}
+
 body {
     background: rgb(255, 255, 255);
     color: #000000;
