--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -1,7 +1,7 @@
 body {
     background: rgb(255, 255, 255);
     color: #000000;
-    font-family: 'PorcupinePickle', Helvetica, Arial, sans-serif;
+    font-family: 'DKPorcupinePickle', Helvetica, Arial, sans-serif;
     font-weight: 300;
     overflow-x: hidden;
 }
